# serendip-sisu-whitelister

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  logger.rs  main.rs  task.rs  ui.rs  utils.rs
