[package]
name = "serendip-sisu-whitelister"
version = "0.1.0"
edition = "2021"

[dependencies]
# A cross-platform GUI library inspired by Elm
iced = { version = "0.13.1", features = ["tokio"] }
# A lightweight logging facade for Rust
log = { version = "0.4.25", features = ["std"] }
# Open a path or URL using the program configured on the system
open = "5.3.2"
# Commands, subscriptions, and future executors for iced
iced_futures = "0.13.2"
# A tiny mid-level library that provides platform-specific standard locations of directories for …
directories = "6.0.0"
# A macro for creating constants that are initialized once
once_cell = "1.20.2"
# Date and time library for Rust
chrono = "0.4"
# An implementation of futures and streams featuring zero allocations, composability, and itera…
futures = "0.3.31"
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.95"
# DataFrame library based on Apache Arrow
polars = { version = "0.46.0", features = ["csv", "lazy", "streaming"] }
# A Gecko-oriented implementation of the Encoding Standard
encoding_rs = "0.8.35"
# Streaming transcoding for encoding_rs
encoding_rs_io = "0.1.7"